src/scss/_mixins.scss
/* ... */
@mixin product-card {
    border-radius: 2.5rem;
    background: linear-gradient(315deg, #e7eaff 0%, #f8f9ff 31.56%, #e9ebf9 51.35%, #eaedff 93.54%);
    padding: 1.5rem;
    display: flex;
    flex-direction: column;

    &-top {
        &-heading {
            position: relative;
            border-radius: 2rem;
            background: $white;
            max-height: 27rem;
            margin-bottom: 1rem;
            display: block;
            overflow: hidden;

            @include small-tablet{
                margin-bottom: 2rem;
            }

            &:hover{
                [class*="-image"] {
                    transform: scale(1.1);
                }
            }
        }

        &-bonus {
            padding: 0.4rem 1.6rem;
            border-radius: $initial-border-radius;
            background: #f83659;
            color: $white;
            font-size: 1.6rem;
            font-style: normal;
            font-weight: 500;
            line-height: 2.464rem;
            position: absolute;
            top: 1.5rem;
            left: 1.5rem;
            z-index: 5;

            @include small-tablet{
                padding: .6rem 2rem;
                font-size: 2.4rem;
                line-height: 3.6rem;
            }
        }

        &-icon {
            position: absolute;
            right: 1.5rem;
            top: 1.5rem;
            cursor: pointer;
            z-index: 5;

            &.--active {
                svg {
                    path {
                        fill: $accent;
                    }
                }
            }

            svg {
                path {
                    transition: .3s all ease-in;
                }

                @include svgSize;

                @include small-tablet{
                    width: 4rem;
                    height: 4rem;
                }
            }

            @include svgHover($accent);
        }

        &-image {
            width: 100%;
            transition: .3s all ease-in;
            height: 26.9rem;

            @include small-tablet{
                max-width: 30.8rem;
                height: 20rem;
            }

            img {
                width: 100%;
                height: 100%;
                object-fit: contain;
            }
        }
    }

    &-title {
        color: $black;
        font-size: 2rem;
        font-style: normal;
        font-weight: 600;
        line-height: 2.8rem;
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        margin-bottom: 1.5rem;
        transition: .3s color ease-in;

        @include small-tablet{
            font-size: 3rem;
            line-height: 4.5rem;
            margin-bottom: 8.8rem;
        }

        &:hover{
            color: $accent;
        }
    }

    &-info {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: $gap-xs;
        margin-bottom: 2.5rem;

        @include small-tablet {
            display: none;
        }

        &-counter {
            display: flex;
            align-items: center;
            gap: $gap-xs;

            .decrement, .increment{
                width: 3rem;
                height: 3rem;
                border-radius: 1rem;
                border: .1rem solid $grey;
                background: $white;
                display: flex;
                align-items: center;
                justify-content: center;

                svg {
                    width: 1.4rem;
                    height: 1.4rem;
                }
            }

            .count{
                color: $black;
                font-size: 1.6rem;
                font-style: normal;
                font-weight: 500;
                line-height: 2.464rem;
            }
        }

        &-category {
            padding: .25rem 1.6rem;
            border-radius: 2rem;
            border: .1rem solid $grey;
            background: $white;
            color: $black;
            font-size: 1.6rem;
            font-style: normal;
            font-weight: 500;
            line-height: 2.464rem;
        }
    }

    &-bottom {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 1.3rem;
        margin-top: auto;

        @include small-tablet{
            flex-direction: column;
            gap: $gap-m;
            align-items: flex-start;
        }

        &-price {
            display: flex;
            align-items: flex-end;
            gap: .7rem;

            @include small-tablet{
                gap: 1rem;
            }

            .big {
                color: $black;
                font-size: 2.4rem;
                font-style: normal;
                font-weight: 600;
                line-height: 2.88rem;

                @include small-tablet{
                    font-size: 4rem;
                    line-height: 4.8rem;
                }
            }

            .small {
                color: $grey;
                font-size: 1.4rem;
                font-style: normal;
                font-weight: 500;
                line-height: 1.96rem;
                text-decoration: line-through;
                text-decoration-color: currentColor;

                @include small-tablet{
                    font-size: 2.4rem;
                    line-height: 3.6rem;
                }
            }
        }

        &-button {
            display: flex;
            align-items: center;
            gap: $gap-xs;
            padding: 1.25rem 2.6rem;

            @include small-tablet{
                max-width: 100%;
                width: 100%;
                padding: 1.4rem 4.4rem 1.4rem 5rem;
            }

            svg {
                @include svgSize;

                @include small-tablet {
                    width: 4rem;
                    height: 4rem;
                }
            }
        }
    }

    @content;
}
/* ... */

